name:                telegram-bot-edsl
version:             0.0.4.0
synopsis:            A small and simple EDSL for building telegram bots
description:         Please see README.md
homepage:            https://github.com/Prillan/telegram-bot-edsl#readme
license:             BSD3
license-file:        LICENSE
author:              Rasmus Précenth
maintainer:          prillan91@gmail.com
copyright:           2016 Rasmus Précenth
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Telegram.Bot.DSL
                       Web.Telegram.Bot.Server
  other-modules:       Web.Telegram.Bot.Internal
  build-depends:       async                >= 2.1.0   && < 2.2
                     , base                 >= 4.7     && < 5
                     , base64-bytestring    >= 1.0.0.1 && < 1.1
                     , bytestring           >= 0.10.6  && < 0.11
                     , containers           >= 0.5.6   && < 0.7
                     , free                 >= 4.12.4  && < 4.13
                     , http-client          >= 0.4.31  && < 0.5
                     , http-client-tls      >= 0.2.4.1 && < 0.3
                     , megaparsec           >= 4.4     && < 4.5
                     , mtl                  >= 2.2.1   && < 2.3
                     , pipes                >= 4.1     && < 4.2
                     , pipes-concurrency    >= 2.0     && < 2.1
                     , random               >= 1.1     && < 1.2
                     , semigroups           >= 0.18    && < 0.19
                     , servant              >= 0.7.1   && < 0.8
                     , servant-server       >= 0.7.1   && < 0.8
                     , telegram-api         >= 0.4.4   && < 0.5
                     , text                 >= 1.2.2.1 && < 1.3
                     , transformers         >= 0.4.2.0 && < 0.5
                     , wai                  >= 3.2.1.1 && < 3.3
                     , wai-logger           >= 2.2.7   && < 2.3
                     , warp                 >= 3.2     && < 3.3
                     , warp-tls             >= 3.2     && < 3.3
  default-language:    Haskell2010


executable telegram-bot-example
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      example/
  main-is:             Main.hs
  build-depends:       base                 >= 4.7     && < 5
                     , optparse-applicative >= 0.12.1  && < 0.13
                     , telegram-bot-edsl
                     , text                 >= 1.2.2.1 && < 1.3
                     , time                 >= 1.5.0.1 && < 1.6
  extensions:          OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/Prillan/telegram-bot-edsl
